<resources>
    <string name="app_name">Quản lý tiền tệ</string>
    <string name="error">Error</string>
    <string name="api_err_no_network">No internet connection</string>
    <string name="api_err_time_out">Request time out</string>
    <string name="api_err_unknown_error">Unknown error</string>
    <string name="no_internet_network">No internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="success">Thành công</string>
    <string name="failed">Thất bại</string>
    <string name="confirm_password">Confirm\npassword</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="last_name">Tên</string>
    <string name="first_name">Họ</string>
    <string name="register">Đăng ký</string>
    <string name="logout">Đăng xuất</string>
    <string name="positive_number">+%d</string>

    <string-array name="types">
        <item>Nhu cầu thiết yếu</item>
        <item>Tiết kiệm dài hạn</item>
        <item>Đầu tư giáo dục</item>
        <item>Thụ hưởng</item>
        <item>Cho đi</item>
        <item>Tự do tài chính</item>
        <item>Tổng hợp</item>
    </string-array>

    <string-array name="states">
        <item>Đã trả</item>
        <item>Sẵn sàng trả</item>
        <item>Đợi trả</item>
    </string-array>

    <string name="provider_name">com.example.nhattruong.financialmanager.MyProvider</string>

    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="details">Chi tiết</string>
    <string name="finish">Hoàn tất</string>
    <string name="retry">Thử lại</string>

    <string name="confirm_logout">Bạn có chắc muốn đăng xuất không?</string>
    <string name="add_note">Thêm ghi chú</string>
    <string name="date">Ngày</string>
    <string name="done">Hoàn thành</string>
    <string name="save">Lưu</string>
    <string name="profile">Thông tin cá nhân</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add">Thêm</string>

    <string name="currency_VND">%s VND</string>
    <string name="currency_USD">%s USD</string>

    <string name="spending">Chi tiêu</string>
    <string name="incomes">Thu nhập</string>
    <string name="debts">Nợ</string>
    <string name="amount_2_dot">Khoản tiền:</string>
    <string name="detail_2_dot">Chi tiết:</string>
    <string name="origin_2_dot">Nguồn gốc:</string>
    <string name="positive">Dương</string>
    <string name="negative">Âm</string>
    <string name="origin">Nguồn gốc</string>
    <string name="state">Trạng thái</string>
    <string name="amount">Khoản tiền</string>
    <string name="detail">Chi tiết</string>
    <string name="edit_debt">Chỉnh sửa nợ</string>
    <string name="date_2_dot">Ngày:</string>
    <string name="general">Tổng thu nhập</string>
    <string name="state_2_dot">Trạng thái:</string>

    <string name="waiting">Waiting</string>
    <string name="ready">Ready</string>
    <string name="done2">Done</string>

    <string name="waiting2">Đợi trả</string>
    <string name="ready2">Sẵn sàng trả</string>
    <string name="done3">Đã trả</string>

    <array name="list_state_debt2">
        <item>@string/ready2</item>
        <item>@string/waiting2</item>
        <item>@string/done3</item>
    </array>

    <array name="list_state_debt">
        <item>@string/ready</item>
        <item>@string/waiting</item>
        <item>@string/done2</item>
    </array>

    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="from_2_dot">Từ:</string>
    <string name="to_2_dot">Tới:</string>
    <string name="all">Tất cả</string>
    <string name="no_data">Không dữ liệu</string>
    <string name="content_2_dot">Nội dung:</string>
    <string name="plan_in_future">Dự định</string>
    <string name="not_submit">Chưa nhập</string>
    <string name="todo">Công việc dự định</string>
    <string name="create">Tạo</string>
    <string name="login_failed">Đăng nhập thất bại!</string>
    <string name="sign_up_failed">Đăng ký thất bại!</string>
    <string name="select_photo">Chọn ảnh</string>
    <string name="next">Tiếp theo</string>
    <string name="choose_category">Chọn mục</string>
    <string name="detail3">Chi tiết</string>
    <string name="logout2">Bạn có chắc đăng xuất không?</string>
    <string name="confirm_delete_todo">Bạn có chắc muốn xóa công việc này?</string>
    <string name="todo_list">Danh sách dự định</string>
    <string name="confirm_delete_debt">Bạn có chắc xóa nợ này?</string>
    <string name="spending_not_lager_income">Chi tiêu không thể lớn hơn thu nhập</string>
</resources>
