<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    tools:context="com.example.nhattruong.financialmanager.mvp.signup.SignUpActivity">

    <FrameLayout
        android:id="@+id/frm_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/app_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/icon_default_size"
            android:layout_height="@dimen/icon_default_size"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/small_10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/white_color"
            android:textSize="24sp" />
    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_first_name"
        style="@style/input_edt_layout">

        <EditText
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|text"
            android:hint="@string/first_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_last_name"
        style="@style/input_edt_layout">

        <EditText
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_email"
        style="@style/input_edt_layout">

        <EditText
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_phone"
        style="@style/input_edt_layout">

        <EditText
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_username"
        style="@style/input_edt_layout">

        <EditText
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|text"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_password"
        style="@style/input_edt_layout">

        <EditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_32dp"
        android:background="@drawable/border_btn_blue_grey"
        android:text="@string/sign_up"
        android:paddingTop="@dimen/small_8dp"
        android:paddingStart="@dimen/large_32dp"
        android:paddingBottom="@dimen/small_8dp"
        android:paddingEnd="@dimen/large_32dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="@color/color_grey_white_text" />
</LinearLayout>
