<?xml version="1.0" encoding="utf-8"?>
<com.amar.library.ui.StickyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:tag="sticky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/small_10dp"
            android:text="@string/details"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <android.support.constraint.ConstraintLayout
            android:tag="sticky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_4dp"
            android:layout_marginTop="@dimen/small_4dp">

            <ImageView
                android:id="@+id/imv_previous"
                android:layout_width="@dimen/icon_default_size"
                android:layout_height="@dimen/icon_default_size"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/large_x"
                android:contentDescription="@null"
                android:src="@drawable/ic_previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_month_year_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/large_x"
                android:layout_marginStart="@dimen/large_x"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imv_next"
                app:layout_constraintStart_toEndOf="@+id/imv_previous"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/default_text_size" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imv_next"
                android:layout_width="@dimen/icon_default_size"
                android:layout_height="@dimen/icon_default_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/large_x"
                android:contentDescription="@null"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#F2F2F2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/su"
                android:textColor="@color/black_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/mo"
                android:textColor="@color/black_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/tu"
                android:textColor="@color/black_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/we"
                android:textColor="@color/black_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/th"
                android:textColor="@color/black_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/fr"
                android:textColor="@color/black_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/sa"
                android:textColor="@color/black_color" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_month"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_color"
            android:gravity="center"
            android:paddingBottom="@dimen/small_10dp"
            android:paddingTop="@dimen/small_10dp"
            android:text="@string/finish"
            android:textColor="@color/white_color" />
    </LinearLayout>

</com.amar.library.ui.StickyScrollView>