<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    tools:context=".mvp.todo.TodoActivity">

    <include layout="@layout/top_bar" />

    <ImageView
        android:contentDescription="@null"
        android:layout_marginTop="@dimen/large"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_todo_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_8dp"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:layout_marginBottom="@dimen/small_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_2_dot"
            android:textColor="@color/black_color"
            android:textSize="@dimen/text_size_18sp" />

        <EditText
            android:id="@+id/edt_content_todo"
            android:inputType="text|textNoSuggestions"
            android:layout_marginStart="@dimen/small_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plan_in_future"
            android:textColor="@color/black_color"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_2_dot"
            android:textColor="@color/black_color"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            android:text="@string/not_submit"
            android:id="@+id/tv_date_todo"
            android:layout_marginStart="@dimen/small_8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/iv_calendar_todo"
            android:contentDescription="@null"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_calendar_blue_white"/>
    </LinearLayout>
</LinearLayout>