<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg_navigation"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/large_32dp"
            android:layout_height="@dimen/large_32dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/small_8dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/small_8dp"
            android:text="@string/save"
            android:textColor="@color/white_color"
            android:textSize="20sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large"
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_photo"
            android:textColor="@color/app_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/mini"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:textColor="@color/black_color"
            android:enabled="false"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </LinearLayout>
</LinearLayout>
