<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp"
        android:layout_marginTop="@dimen/large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/date_2_dot"
            android:textColor="@color/black_color"
            android:textSize="@dimen/default_header_text_size" />

        <TextView
            android:id="@+id/tv_edit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/small_8dp"
            android:layout_weight="1"
            android:textColor="@color/app_color"
            android:textSize="@dimen/default_header_text_size" />

        <ImageView
            android:id="@+id/iv_edit_calendar"
            android:layout_width="@dimen/icon_default_size"
            android:layout_height="@dimen/icon_default_size"
            android:contentDescription="@null"
            android:src="@drawable/ic_calendar_blue_white" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detail"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_edit_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/origin"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/small_8dp"
        android:layout_marginBottom="@dimen/small_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_2_dot"
            android:textColor="@color/black_color"
            android:textSize="20sp"/>

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large">

            <TextView
                android:id="@+id/tv_state_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@drawable/bg_btn_grey"
                android:gravity="center"
                android:textSize="@dimen/default_text_size"
                android:drawableEnd="@drawable/ic_drop_down_blue" />

            <Spinner
                android:id="@+id/sp_state"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:spinnerMode="dropdown"
                android:background="@color/white_color"
                android:paddingBottom="10dp"
                android:popupBackground="@drawable/bg_popup_window"
                android:layout_gravity="bottom"/>
        </FrameLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="@dimen/small_8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_edit_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/negative" />

        <RadioButton
            android:id="@+id/rd_edit_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_60dp"
            android:text="@string/positive" />
    </RadioGroup>
</LinearLayout>