<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_color"
    tools:context=".mvp.jar_detail.JarDetailActivity">

    <include layout="@layout/top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/small_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_2_dot"/>

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/all"
            android:textColor="@color/black_color"
            android:layout_marginStart="@dimen/small_8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_2_dot"/>

        <TextView
            android:text="@string/all"
            android:id="@+id/tv_end_date"
            android:textColor="@color/black_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_8dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/iv_calendar_filter_detail"
            android:contentDescription="@null"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_calendar_blue_white"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.design.widget.TabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/app_color"
        app:tabTextColor="@color/black_color"
        android:layout_marginBottom="4dp"/>
</LinearLayout>